# jsonweblog

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  TRD.md  testme.bat
src/: filter.rs  lib.rs  log_entry.rs  main.rs  parser.rs  schema.rs  server.rs
src/ui/: mod.rs  static_files.rs
