[package]
name = "jsonweblog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web framework and server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio = { version = "1.0", features = ["full"] }

# JSON parsing and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket for real-time updates
tokio-tungstenite = "0.21"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Async streams for stdin processing
tokio-stream = { version = "0.1", features = ["io-util"] }
futures = "0.3"

# Static file serving for UI
include_dir = "0.7"
